--- a/app/globals.css
+++ b/app/globals.css
@@ -9,8 +9,6 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-poppins);
-  --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -21,6 +19,8 @@
 }
 
 html {
+  scroll-behavior: smooth;
+  scroll-snap-type: y mandatory;
   -ms-overflow-style: none;
   scrollbar-width: none; 
 }
@@ -29,10 +29,10 @@ html::-webkit-scrollbar {
   display: none;
 }
 
-
 body {
   background: var(--background);
   color: var(--foreground);
+  box-sizing: border-box;
 }
 
 .custom-strike::after {
